<resources>
    <string name="app_name">Hexastle</string>
    <string name="title">Hexastle</string>
    <string name="info">About</string>
    <string name="desc">no content</string>
    <string name="close_app">Yes</string>
    <string name="stay_in_app">No</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="about_title">About application</string>
    <string name="save_game">Save game</string>
    <string name="dont_save">Discard changes</string>
    <string name="save_question">Do you want to save changes? Unsaved progress will be lost.</string>
    <string name="game">Game</string>
    <string name="leave_game">Leave game</string>
    <string name="stay_in">Keep playing</string>
    <string name="leave_question">Do you want to leave the game?</string>
    <string name="new_ok">That\'s OK</string>
    <string name="last_game_lost">Recent game is lost</string>
    <string name="cancel">Cancel</string>
    <string name="override_question">You have some recent game saved. If you create a new one, saved progress will be lost.</string>
    <string name="tile_creator_title">Tile Creator</string>
    <string name="tile_creator_desc">Create new tiles from additional pieces and use them in World Creator.</string>
    <string name="world_creator_title">World Creator</string>
    <string name="world_creator_desc">Create hexagonal world using ready tiles or created in Tile Creator.</string>
    <string name="start_game">Start game</string>
    <string name="new_game">New game</string>
    <string name="load_game">Load game</string>
    <string name="no_saved_game">There is no last game saved.</string>
    <string name="new_game_created">New game is created.</string>
    <string name="last_game_load">Loaded last game.</string>
    <string name="reset">Reset game</string>
    <string name="navigation_title">Tile Picker</string>
    <string name="loading_text">Loading tiles...</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="save_or_discard">What about your current work?</string>
    <string name="no_permission">Missing permission. Current work cannot be saved.</string>

    <string-array name="about_description">
        <item>Here will be description of game rules.</item>
        <item>In Hexastle you can build castles and other lands out of hex-puzzles.</item>
        <item>It is possible also to make custom pieces.</item>
        <item>Game state can be saved.</item>
    </string-array>

    <string-array name="categories">
        <item>basic</item>
        <item>ground</item>
        <item>trees</item>
        <item>nature extra</item>
        <item>buildings</item>
        <item>roofs</item>
        <item>building extra</item>
        <item>custom</item>
    </string-array>
</resources>
