<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    android:weightSum="2"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/tileCreatorImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/new_tile" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/tileCreatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/tile_creator_title"
            android:textSize="35sp"
            android:theme="@style/hexastle_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tileCreatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/tile_creator_desc"
            android:textSize="25sp"
            android:theme="@style/hexastle_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/worldCreatorImageView"
            android:contentDescription="@string/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/new_world" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/worldCreatorButton"
            style="@style/hexastle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/world_creator_title"
            android:textSize="35sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/worldCreatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/world_creator_desc"
            android:textSize="25sp"
            android:theme="@style/hexastle_text" />

    </LinearLayout>
</LinearLayout>